--- a/app/assets/stylesheets/media.css.scss
+++ b/app/assets/stylesheets/media.css.scss
@@ -43,11 +43,19 @@
   #photo {
     height: 300px !important;
   }
+
+  .popover {
+    display: none !important;
+  }
+
+  .why_donate {
+    display: none !important;
+  }
 }
 
 .media-bar {
   text-align: center;
-  z-index: 10;
+  z-index: 1100;
 }
 
 .media-link {
@@ -196,4 +204,18 @@
 
 #donation {
   max-width: 50px;
+}
+
+.why_donate {
+  cursor: pointer; cursor: hand;
+}
+
+.donate {
+  float: left;
+  margin-right: 20px;
+}
+
+.popover {
+  width: 200px;
+  height: 250px;
 }
