almost working purchasing stuff

--- a/app/assets/stylesheets/media.css.scss
+++ b/app/assets/stylesheets/media.css.scss
@@ -218,4 +218,12 @@
 .popover {
   width: 200px;
   height: 250px;
+
+#review_purchase {
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+#purchase_email {
+  margin-top: 30px;
 }
