--- a/app/views/media/index.html.haml
+++ b/app/views/media/index.html.haml
@@ -20,7 +20,8 @@
           %h2.center.lato Entire Catalog $10
           %h4 For a limited time only get Charles Ellsworth's entire catalog of over 30 songs including never released music for only $10
           .catalog-content
-            %form{role: 'form', method: 'POST', action: '/media/purchase'}
+            %form{role: 'form'}
+              = hidden_field_tag :authenticity_token, form_authenticity_token
               .catalog-body
                 %ul.list-unstyled.album-content
                   - @albums['ALBUMS'].each do |a|
@@ -31,7 +32,7 @@
                         - a['TRACKS'].each do |t|
                           .checkbox
                             %label
-                              %input.lato{"checked" => "checked", type: 'checkbox', name: "#{a['NAME']}~#{t['FILENAME']}"}
+                              %input.lato{"checked" => "checked", type: 'checkbox', name: "[tracks]#{a['NAME']}~#{t['FILENAME']}"}
                               = t['NAME']
               .row
                 .donate
@@ -42,7 +43,7 @@
                   %i.fa.fa-question-circle
               %br
               %h3#total.center TOTAL: $10
-              %button#purchase.btn.btn-default{type: 'button'} Purchase
+              %button#purchase.btn.btn-default{type: 'submit'} Purchase
         .album-art.col-md-2.hidden-xs
           - art = @albums['ALBUMS'].first['ART']
           - file = File.exists?("#{Rails.root}/app/assets/images/album_art/#{art}") ? art : "no_album_art.jpeg"
