--- a/app/views/media/purchase_confirm.html.haml
+++ b/app/views/media/purchase_confirm.html.haml
@@ -21,4 +21,4 @@
   .actions.text-center
     %p
       %i Clicking on Confirm Purchase will bill you and send you an email with a download link.
-    %button.btn{type: 'submit'} Confirm Purchase
+    %button.btn#confirm_button{type: 'submit'} Confirm Purchase
