--- a/app/views/layouts/no_header.html.haml
+++ b/app/views/layouts/no_header.html.haml
@@ -7,4 +7,6 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: name
     = yield
