--- a/app/views/media/index.html.haml
+++ b/app/views/media/index.html.haml
@@ -41,6 +41,8 @@
                 .why_donate{'data-toggle' => 'popover', 'data-title' => 'Donations Help!', 'data-content' => 'Donations will be used to produce new material and book more tour dates', 'data-placement' => 'right'}
                   Why Donate
                   %i.fa.fa-question-circle
+              .donate-responsive
+                * Donations will be used to produce new material and book more tour dates
               %br
               %h3#total.center TOTAL: $10
               %button#purchase.btn.btn-default{type: 'submit'} Purchase
@@ -112,6 +114,8 @@
         .photos
           #photo-carousel.carousel.slide{'data-ride' => 'carousel'}
             #inner.carousel-inner
+              .item.active
+                %img#default
             %a.hidden.prev-button.left.carousel-control{"data-slide" => "prev", :href => "#carousel-prev", :role => "button"}
               %span.glyphicon.glyphicon-chevron-left
             %a.hidden.next-button.right.carousel-control{"data-slide" => "next", :href => "#carousel-next", :role => "button"}
@@ -121,3 +125,5 @@
           %h3 Alubms
           %hr
           %ul#photo_album_list.list-unstyled
+            %li#album-spinner
+              %img{src: image_path('ajax-loader.gif')}
