--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -36,7 +36,10 @@
 
 @media (max-width: 500px) {
   .banner-area {
-    margin-left: 70px !important;
+    margin-left: 30px !important;
+    position: relative !important;
+    top: 100px !important;
+    left: 50px !important;
   }
 }
 
