latest content responsive fix

--- a/app/views/layouts/_latest.html.haml
+++ b/app/views/layouts/_latest.html.haml
@@ -1,4 +1,4 @@
-.blog-content.col-md-6.col-sm-12
+.blog-content.col-md-6.col-sm-12.col-xs-12
   .title.lato Blog
   #tumblr.posts
     - @recent_posts.each do |post|
