--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -43,9 +43,9 @@
   }
 }
 
-@media (max-width: 400px) {
-  .tumblr-photo {
-    width: 400px;
+@media (max-width: 401px) {
+  .posts {
+    max-width: 73% !important;
   }
 }
 
