point store to square page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,7 +25,7 @@
         %li
           = link_to("Shows", shows_path, class: 'nav-item')
         %li
-          = link_to("Store", 'http://wanderingman.bigcartel.com/', target: '_blank', class: 'nav-item')
+          = link_to("Store", ' https://squareup.com/market/charles-ellsworth', target: '_blank', class: 'nav-item')
         %li
           = link_to(contact_index_path, class: 'nav-item') do
             = fa_icon "envelope"
