--- a/app/views/layouts/_latest.html.haml
+++ b/app/views/layouts/_latest.html.haml
@@ -1,6 +1,6 @@
 .blog-content.col-md-6.col-sm-12.col-xs-12
   .title.lato Blog
-  #tumblr.posts
+  #tumblr.posts.scrollable
     - @recent_posts.each do |post|
       - caption = post['caption']
       - if caption.present?
@@ -21,10 +21,10 @@
           Other
       %br
       %br
-.twitter-content.col-md-6.col-sm-12
+.twitter-content.col-md-6.col-sm-12.scrollable
   .twitter-header.lato.title
     = fa_icon 'twitter 2x', text: 'Twitter'
-  #twitter.posts
+  #twitter.posts.scrollable
     .top-arrow
       %a#tumblr_anchor_responsive.page-scroll{href: '#latest'}
         = fa_icon 'tumblr 2x'
