--- a/app/views/media/index.html.haml
+++ b/app/views/media/index.html.haml
@@ -22,8 +22,8 @@
           .catalog-content
             %form{role: 'form'}
               = hidden_field_tag :authenticity_token, form_authenticity_token
-              .catalog-body
-                %ul.list-unstyled.album-content
+              .catalog-body.scroll
+                %ul.list-unstyled.album-content.scroll
                   - @albums['ALBUMS'].each do |a|
                     %li
                       %h4.lato.album-title
