--- a/app/views/promotion/index.html.haml
+++ b/app/views/promotion/index.html.haml
@@ -1,5 +1,12 @@
 %h1.center Welcome To My NotAKickStarter Page
-%h4.center.promo-intro BLAH BLAH BLAH BLAH
+- if PromotionText.first
+  - header_text = PromotionText.first.header_content || 'Click to add text'
+  - footer_text = PromotionText.first.footer_content || 'Click to add text'
+- else
+  - header_text = 'Click to add text'
+  - footer_text = 'Click to add text'
+%h4.center.promo-intro
+  = header_text
 .main-video-section
   - if @first_main
     - key = @first_main.url.split("/").last
@@ -52,6 +59,8 @@
     - if admin_signed_in?
       .add-live-video.add-video.pointer
         = fa_icon 'plus', text: 'Add Video', class: 'pointer'
+.clearfix
 %hr
 %h4.center.footer-text
+  = footer_text
 = render partial: '/layouts/add_video'
