--- a/app/assets/stylesheets/promotion.css.scss
+++ b/app/assets/stylesheets/promotion.css.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the Promotion controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.donation-label {
+  font-size: 20px;
+}
+
+.art-thumb {
+  width: 160px;
+  height: 160px;
+}
