edit header / footer text

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -27,6 +27,8 @@
         %li
           = link_to("Store", ' https://squareup.com/market/charles-ellsworth', target: '_blank', class: 'nav-item')
         %li
+          = link_to("Not A Kickstarter", not_a_kickstarter_path, target: '_blank', class: 'nav-item')
+        %li
           = link_to(contact_index_path, class: 'nav-item') do
             = fa_icon "envelope"
         %li.dropdown
