--- a/app/views/promotion/index.html.haml
+++ b/app/views/promotion/index.html.haml
@@ -7,7 +7,7 @@
   - if header_admin_class
     %span.glyphicon.glyphicon-edit
 .button-container.center
-  = link_to donation_path, 'Get Involved', class: 'btn btn-inverse'
+  = link_to 'Get Involved', contribute_path, class: 'btn btn-inverse'
 %hr
 .main-video-section
   - if @first_main
