fix all btn-primary to be btn-inverse

--- a/app/views/layouts/_add_show_modal.html.haml
+++ b/app/views/layouts/_add_show_modal.html.haml
@@ -39,6 +39,6 @@
             %input#edit_id.hidden{name: 'hidden_id', value: ''}
             .modal-footer
               %button#close.btn.btn-default{type: 'button', 'data-dismiss' => 'modal'} Close
-              %button.btn.btn-primary{type: 'submit'} Submit
+              %button.btn.btn-inverse{type: 'submit'} Submit
 
 
