--- a/app/views/layouts/_add_video.html.haml
+++ b/app/views/layouts/_add_video.html.haml
@@ -17,4 +17,4 @@
           .modal-footer
             .pull-right
               %button.btn.btn-default{type: 'button', 'data-dismiss' => 'modal'} Close
-              %button.btn.btn-primary{type: 'submit'} Submit
+              %button.btn.btn-inverse{type: 'submit'} Submit
