--- a/app/views/layouts/_email_modal.html.haml
+++ b/app/views/layouts/_email_modal.html.haml
@@ -9,4 +9,4 @@
             %input.form-control{name: 'email', placeholder: "Enter email", type: 'email'}
           .form-group.text-center
             %button.btn.btn-default{type: 'button', 'data-dismiss' => 'modal'} Close
-            %button.btn.btn-primary{type: 'submit'} Submit
+            %button.btn.btn-inverse{type: 'submit'} Submit
