--- a/app/views/layouts/_register_modal.html.haml
+++ b/app/views/layouts/_register_modal.html.haml
@@ -11,4 +11,4 @@
 
           .pull-right
             %button.btn.btn-default{type: 'button', 'data-dismiss' => 'modal'} Close
-            %button.btn.btn-primary{type: 'submit'} Submit
+            %button.btn.btn-inverse{type: 'submit'} Submit
