--- a/app/views/media/index.html.haml
+++ b/app/views/media/index.html.haml
@@ -115,8 +115,10 @@
         .photos
           #photo-carousel.carousel.slide{'data-ride' => 'carousel'}
             #inner.carousel-inner
-              .item.active
-                %img#default
+              - @photo_data.first.last[:images].each_with_index do |p, i|
+                - active = i == 0 ? 'active' : 'not-active'
+                .item{class: active}
+                  %img{src: "http://#{p[:src]}"}
             %a.hidden.prev-button.left.carousel-control{"data-slide" => "prev", :href => "#carousel-prev", :role => "button"}
               %span.glyphicon.glyphicon-chevron-left
             %a.hidden.next-button.right.carousel-control{"data-slide" => "next", :href => "#carousel-next", :role => "button"}
@@ -125,6 +127,8 @@
         .photo-album-container
           %h3 Albums
           %hr
-          %ul#photo_album_list.list-unstyled
-            %li#album-spinner
-              %img{src: image_path('ajax-loader.gif')}
+          - @photo_data.each do |id, album|
+            %ul#photo_album_list.list-unstyled
+              %li
+                %a.album-link{href: '#', data: { images: album[:images].map { |i| i[:src] }.join(",")}}
+                  = album[:name]
